--- a/assets/style.css
+++ b/assets/style.css
@@ -1,8 +1,57 @@
-.container-fluid {
-    border: 1px solid black;
+:root {
+    --new-bs-primary: #2aa75e;
+    --new-bs-primary-text-emphasis: #248b4f;
 }
 
 .scrollable-list {
-    max-height: 300px;
+    height: 700px;
     overflow-y: auto;
+}
+
+.bordered-col {
+    border-radius: 0px;
+    border: 1px solid white;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: "franklin-gothic-urw", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+}
+
+p, span, button, div, .btn {
+    font-family: "franklin-gothic-urw", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 1.3rem;
+}
+
+.btn-primary {
+    --bs-btn-color: #fff;
+    --bs-btn-bg: var(--new-bs-primary);
+    --bs-btn-border-color: var(--new-bs-primary);
+    --bs-btn-hover-color: #fff;
+    --bs-btn-hover-bg: var(--new-bs-primary-text-emphasis);
+    --bs-btn-hover-border-color: var(--new-bs-primary-text-emphasis);
+    --bs-btn-focus-shadow-rgb: 49,132,253;
+    --bs-btn-active-color: #fff;
+    --bs-btn-active-bg: var(--new-bs-primary-text-emphasis);
+    --bs-btn-active-border-color: var(--new-bs-primary-text-emphasis);
+    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    --bs-btn-disabled-color: #fff;
+    --bs-btn-disabled-bg: var(--new-bs-primary);
+    --bs-btn-disabled-border-color: var(--new-bs-primary);
+}
+
+header {
+    border-bottom: 1px solid white;
+    margin: -1px;
+    background-color: #3a4147;
+}
+
+footer {
+    height: 100px;
+    border-top: 1px solid white;
+    margin: -1px;
+    background-color: #3a4147;
 }
