--- a/assets/style.css
+++ b/assets/style.css
@@ -11,6 +11,7 @@
 .bordered-col {
     border-radius: 0px;
     border: 1px solid white;
+    transition: all 1s ease;
 }
 
 h1, h2, h3, h4, h5, h6 {
