--- a/assets/style.css
+++ b/assets/style.css
@@ -14,6 +14,10 @@
     transition: all 1s ease;
 }
 
+.resultsHolder {
+    min-height: 770px;
+}
+
 h1,
 h2,
 h3,
@@ -51,6 +55,23 @@ div,
     --bs-btn-disabled-color: #fff;
     --bs-btn-disabled-bg: var(--new-bs-primary);
     --bs-btn-disabled-border-color: var(--new-bs-primary);
+}
+
+.btn-outline-primary {
+    --bs-btn-color: var(--new-bs-primary);
+    --bs-btn-border-color: var(--new-bs-primary);
+    --bs-btn-hover-color: #fff;
+    --bs-btn-hover-bg: var(--new-bs-primary);
+    --bs-btn-hover-border-color: var(--new-bs-primary);
+    --bs-btn-focus-shadow-rgb: 13,110,253;
+    --bs-btn-active-color: #fff;
+    --bs-btn-active-bg: var(--new-bs-primary);
+    --bs-btn-active-border-color: #var(--new-bs-primary);
+    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    --bs-btn-disabled-color: #var(--new-bs-primary);
+    --bs-btn-disabled-bg: transparent;
+    --bs-btn-disabled-border-color: #var(--new-bs-primary);
+    --bs-gradient: none;
 }
 
 header {
@@ -93,4 +114,12 @@ footer {
 .carousel-item{
     opacity: 10%;
     transition: all 0.5s ease;
+}
+
+#regenerateBtn {
+    width: 100%;
+}
+
+#saveBtn {
+    width: 100%;
 }
